:white_check_mark: 优化测试代码

--- a/screw-core/src/main/resources/properties/sqlserver.properties
+++ b/screw-core/src/main/resources/properties/sqlserver.properties
@@ -16,12 +16,10 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-#\u9A71\u52A8
-driver=com.intersys.jdbc.CacheDriver
 #URL
-url=jdbc:Cache://xxx.xxx.xxx.xxx:1972/xxx
-#schema
-schema=xxx
+url=jdbc:sqlserver://xxx.xxx.xxx.xxx:1433;DatabaseName=xxx
+#\u9A71\u52A8
+driver=com.microsoft.sqlserver.jdbc.SQLServerDriver
 #\u7528\u6237\u540D
 username=username
 #\u5BC6\u7801
