--- a/screw-core/src/main/resources/properties/tidb.properties
+++ b/screw-core/src/main/resources/properties/tidb.properties
@@ -16,13 +16,11 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
-#\u9A71\u52A8
-driver=com.intersys.jdbc.CacheDriver
 #URL
-url=jdbc:Cache://xxx.xxx.xxx.xxx:1972/xxx
-#schema
-schema=xxx
+url=jdbc:mysql://xxx.xxx.xxx.xxx:3306/xxx?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
+#\u9A71\u52A8
+driver=com.mysql.cj.jdbc.Driver
 #\u7528\u6237\u540D
 username=username
 #\u5BC6\u7801
-password=password
+password=username
