--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,12 @@
                 <artifactId>poi</artifactId>
                 <version>${poi.version}</version>
             </dependency>
+            <!--excelant-->
+            <dependency>
+                <groupId>org.apache.poi</groupId>
+                <artifactId>poi-excelant</artifactId>
+                <version>${poi.version}</version>
+            </dependency>
             <!-- word -->
             <dependency>
                 <groupId>org.apache.poi</groupId>
@@ -110,7 +116,7 @@
                 <artifactId>poi-ooxml</artifactId>
                 <version>${poi.version}</version>
             </dependency>
-            <!-- xlsx  依赖这个包 -->
+            <!-- xlsx  -->
             <dependency>
                 <groupId>org.apache.poi</groupId>
                 <artifactId>poi-ooxml-schemas</artifactId>
