--- a/screw-core/pom.xml
+++ b/screw-core/pom.xml
@@ -18,6 +18,11 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
         </dependency>
+        <!--excelant-->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-excelant</artifactId>
+        </dependency>
         <!-- word -->
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -28,7 +33,7 @@
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
         </dependency>
-        <!-- xlsx  依赖这个包 -->
+        <!-- xlsx  -->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml-schemas</artifactId>
