:heavy_plus_sign: 添加commons-lang依赖

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <logback-classic.version>1.2.3</logback-classic.version>
         <fastjson.version>1.2.71</fastjson.version>
         <poi.version>4.1.2</poi.version>
+        <commons-lang.version>2.6</commons-lang.version>
         <maven-plugin-api.version>3.6.3</maven-plugin-api.version>
         <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
         <maven-plugin-annotations.version>3.6.0</maven-plugin-annotations.version>
@@ -92,6 +93,12 @@
     <!--依赖管理-->
     <dependencyManagement>
         <dependencies>
+            <!-- commons-lang -->
+            <dependency>
+                <groupId>commons-lang</groupId>
+                <artifactId>commons-lang</artifactId>
+                <version>${commons-lang.version}</version>
+            </dependency>
             <!--poi-->
             <dependency>
                 <groupId>org.apache.poi</groupId>
