:zap: 添加忽略文件

--- a/pom.xml
+++ b/pom.xml
@@ -389,6 +389,8 @@
                         <exclude>**/.gitkeep</exclude>
                         <exclude>**/mvnw</exclude>
                         <exclude>**/.mvn/**</exclude>
+                        <exclude>**/.gitkeep</exclude>
+                        <exclude>**/spring.factories</exclude>
                         <exclude>**/resources/template/**</exclude>
                     </excludes>
                     <strictCheck>true</strictCheck>
