--- a/secrw-dashboard/pom.xml
+++ b/secrw-dashboard/pom.xml
@@ -19,6 +19,12 @@
     </properties>
 
     <dependencies>
+        <!--screw-core-->
+        <dependency>
+            <groupId>cn.smallbun.screw</groupId>
+            <artifactId>screw-core</artifactId>
+            <version>1.0.3</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
