--- a/secrw-dashboard/src/main/resources/application.yml
+++ b/secrw-dashboard/src/main/resources/application.yml
@@ -16,4 +16,26 @@
 # along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #
 
+#spring配置
+spring:
+  application:
+    name: 'screw dashboard'
+#mybatis 配置
+mybatis:
+  type-aliases-package: cn.smallbun.screw.dashboard.**.entity   #别名多个,分隔
+  type-handlers-package: cn.smallbun.screw.dashboard.**.entity.typehandler #类型处理器多个,分隔
+  mapper-locations: classpath*:mapper/**/*.xml #mapper xml位置
+  configuration:
+    map-underscore-to-camel-case: true     #下划线转驼峰
+    default-fetch-size: 100     #获取数据默认大小
+    default-statement-timeout: 30 #默认超时
+    cache-enabled: false #开启二级缓存
+    log-impl: org.apache.ibatis.logging.slf4j.Slf4jImpl
+    default-enum-type-handler: org.apache.ibatis.type.EnumOrdinalTypeHandler
+    lazy-loading-enabled: true #设置为true为打开延迟加载 实体类必须加上这个注解@JsonIgnoreProperties(value = {"handler"}) 否则将会报com.fasterxml.jackson.databind.exc.InvalidDefinitionException错误
+    aggressive-lazy-loading: false #将积极加载改为消极加载，即延迟加载
+    default-executor-type: batch #默认执行器类型
+    auto-mapping-unknown-column-behavior: failing #设置自动映射未知列的行为
+logging:
+  config: classpath:config/logback-spring.xml
 
