:zap: 新增扩展模块

--- a/pom.xml
+++ b/pom.xml
@@ -287,6 +287,7 @@
     <modules>
         <module>screw-core</module>
         <module>screw-maven-plugin</module>
+        <module>screw-extension</module>
     </modules>
     <distributionManagement>
         <snapshotRepository>
