--- a/screw-core/src/main/resources/properties/mysql.properties
+++ b/screw-core/src/main/resources/properties/mysql.properties
@@ -17,10 +17,10 @@
 #
 
 #URL
-url=jdbc:mysql://xxx.xxx.xxx.xxx:3306/xxx?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8&useInformationSchema=true
+url=jdbc:mysql://127.0.0.1:3306/smallbun?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8&useInformationSchema=true
 #\u9A71\u52A8
 driver=com.mysql.cj.jdbc.Driver
 #\u7528\u6237\u540D
-username=username
+username=root
 #\u5BC6\u7801
-password=password
+password=root
