--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <logback-classic.version>1.2.3</logback-classic.version>
         <fastjson.version>1.2.73</fastjson.version>
         <poi.version>4.1.2</poi.version>
+        <druid.version>1.1.23</druid.version>
         <commons-lang.version>2.6</commons-lang.version>
         <maven-plugin-api.version>3.6.3</maven-plugin-api.version>
         <maven-plugin-plugin.version>3.6.0</maven-plugin-plugin.version>
@@ -93,6 +94,12 @@
     <!--依赖管理-->
     <dependencyManagement>
         <dependencies>
+            <!-- druid -->
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
             <!-- commons-lang -->
             <dependency>
                 <groupId>commons-lang</groupId>
