--- a/screw-core/pom.xml
+++ b/screw-core/pom.xml
@@ -15,8 +15,8 @@
     <dependencies>
         <!--commons-lang-->
         <dependency>
-            <groupId>commons-lang</groupId>
-            <artifactId>commons-lang</artifactId>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
         </dependency>
         <!--logging-->
         <dependency>
