--- a/screw-core/pom.xml
+++ b/screw-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>cn.smallbun.screw</groupId>
         <artifactId>screw</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <packaging>jar</packaging>
