--- a/screw-extension/pom.xml
+++ b/screw-extension/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>screw</artifactId>
         <groupId>cn.smallbun.screw</groupId>
-        <version>1.0.5</version>
+        <version>1.0.6-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
