:tada: H2 数据库支持、优化代码

--- a/screw-extension/pom.xml
+++ b/screw-extension/pom.xml
@@ -15,7 +15,7 @@
         <dependency>
             <groupId>cn.smallbun.screw</groupId>
             <artifactId>screw-core</artifactId>
-            <version>1.0.5</version>
+            <version>${project.version}</version>
         </dependency>
         <!--lombok-->
         <dependency>
