--- a/screw-maven-plugin/pom.xml
+++ b/screw-maven-plugin/pom.xml
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>cn.smallbun.screw</groupId>
             <artifactId>screw-core</artifactId>
-            <version>1.0.5</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
