支持clickhouse数据库

--- a/screw-core/pom.xml
+++ b/screw-core/pom.xml
@@ -115,6 +115,7 @@
         <dependency>
             <groupId>ru.yandex.clickhouse</groupId>
             <artifactId>clickhouse-jdbc</artifactId>
+            <scope>provided</scope>
             <exclusions>
                 <exclusion>
                     <artifactId>slf4j-api</artifactId>
