--- a/screw-maven-plugin/pom.xml
+++ b/screw-maven-plugin/pom.xml
@@ -3,9 +3,9 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>cn.smallbun.screw</groupId>
+        <groupId>io.github.duqian42707</groupId>
         <artifactId>screw</artifactId>
-        <version>1.0.6-SNAPSHOT</version>
+        <version>1.0.6</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -16,7 +16,7 @@
     <dependencies>
         <!--项目核心包-->
         <dependency>
-            <groupId>cn.smallbun.screw</groupId>
+            <groupId>io.github.duqian42707</groupId>
             <artifactId>screw-core</artifactId>
             <version>${project.version}</version>
         </dependency>
